OSSN - OPEN SOURCE SOCIAL NETWORK 4.4

* Embedded videos didn't show up in post #997

OSSN - OPEN SOURCE SOCIAL NETWORK 4.3.1

* Comments broken on profile cover
* Security fixes 

OSSN - OPEN SOURCE SOCIAL NETWORK 4.3

* OSSN v4.x partially upgraded to v4.2
* wall/view didn't escape new lines #920
* Components:getSettings shows wrong value #936
* Ossnphotos get cover type 1 not working #943
* OssnGroups : Incorrect integer value: '' for column 'item_guid' #942
* Refused to execute script from because strict mime type chorme #944
* Comments attachment image not responsive #938
* Remove spaces from the input #948
* Photos posted from phone get rotated #918
* Add class name for dynamic menu items #934
* Add hook to override the ossn input #928
* Redirect User to login page if session expired from home page #929
* Add mod_rewrite prerequisite skip param. #927
* Sidebar (menu) design improvements.
* Profile cover comment and likes notification not appears #945
* Site newsfeed (wall) becomes unusable if OssnLikes component is disabled #955
* HTML(divs) must not be nested in paragraphs #962
* Unused param removed from isUsername() check #969
* Allow to use db ports in hostname #970 Thanks to @rodrigodemacedo  <https://github.com/rodrigodemacedo>
* Show errors to admins if enabled (not to visitors) #961
* Delete unused files #956
* Postings and comments with same behaviour #924
* Create link in nav to list all groups #990

OSSN - OPEN SOURCE SOCIAL NETWORK 4.2 

* Profile/cover photos upload are not responsive #888
* Word break on comments #895
* Almost improved x10 DB performance.
* (ajax didn't work) when delete newly created post #899
* Switch statements may only contain one default clause in OssnSitePages #897
* OssnInvites send duplicate emails #903
* Remove google map search API as it requires API #906
* OssnComponents: getbyName shows wrong data #910
* OssnDatabaseException' with message 'Incorrect integer value #904
* Add callback form relationship add #911