@@ -1,6 +1,7 @@
 OSSN - OPEN SOURCE SOCIAL NETWORK 4.4
 
 * Embedded videos didn't show up in post #997
+* Avoid the multiple db connections #1001
 
 OSSN - OPEN SOURCE SOCIAL NETWORK 4.3.1
 
